<resources>
    <string name="app_name">Diseño Constrain Layout</string>
    <string name="nombre">Zabuza Momochi</string>
    <string name="ocupacion">Ninja asesino</string>
    <string name="ciudad"> Aldea Oculta de la Niebla</string>
    <string name="fuerza">600 / 1000</string>
    <string name="armas">520 / 1000</string>
    <string name="strong">Fuerza</string>
    <string name="victimas">Víctimas</string>
    <string name="num_victimas">4200</string>
    <string name="armas_t">Armas</string>
    <string name="titulo">Sobre Zabuza Momochi</string>
    <string name="cuerpo">El demonio oculto en la Niebla, título que adquirió cuando acabó con todos los estudiantes de la academia que se iban a graduar en la Aldea Oculta de la Niebla ese año. Zabuza se convertiría en uno de los Siete Espadachines Ninja de la Niebla donde adquirió su espada Kubikiribōchō. También fue un miembro de la división ANBU, convirtiéndose en el mayor especialista en rastreo, asesinato silencioso y espionaje.</string>
    <string name="background">background</string>
</resources>